# configurator

./: .gitignore  Cargo.toml  NOTE.md  README.md  SPEC.md  TODO.md  io.github.cosmic-utils.configurator.json  io.github.cosmic_utils.configurator.json  justfile  log.ron  update-tests.sh
.cargo/: config.toml
.github/workflows/: ci.yml
configurator/: Cargo.toml
configurator/res/: io.github.wiiznokes.configurator.json
configurator/src/: app.rs  config.rs  json_schema_test_suite.rs  localize.rs  main.rs  message.rs  page.rs  test_common.rs  testing1.rs  utils.rs  view.rs
configurator/src/generic_value/: map.rs  merge.rs  mod.rs  number.rs
configurator/src/manual_testing/: mod.rs  testing.rs  testing1.rs  testing2.rs
configurator/src/node/: apply_figment.rs  apply_value.rs  data_path.rs  from_json_schema.rs  from_json_schema2.rs  from_rust_schema.rs  from_schema_and_value.rs  mod.rs  new_gen.rs  number.rs  provider.rs  ser.rs  set_modified.rs  tests.rs  to_figment_value.rs  to_value.rs
configurator/src/node/tests/: apply_retreive_value.rs
configurator/src/providers/: cosmic_ron.rs  mod.rs  tests.rs
configurator/src/test_schema/: testing1.rs  testing2.rs
configurator_schema/: Cargo.toml
configurator_schema/src/: lib.rs
cosmic_compat/: generate_schema.sh
cosmic_compat/schemas/: com.system76.CosmicPanel.Dock.json  com.system76.CosmicPanel.Panel.json
dev/: TODO.md
i18n/sv/: configurator.ftl
res/: desktop_entry.desktop  metainfo.xml
ron_value/: Cargo.toml
ron_value/src/: de.rs  de_pom.rs  lib.rs  map.rs  number.rs  ser.rs  test.rs
rust_schema/: .gitignore  Cargo.toml  README.md  schema.json  schema2.json  struct_nested.json
rust_schema/src/: default.rs  gen_schema.rs  gen_schema2.rs  lib.rs  number.rs  serialize.rs  test_common.rs  testing.rs  value.rs
rust_schema2/: Cargo.toml  mental_model
rust_schema2/src/: generate.rs  lib.rs  number.rs  schema.rs  serialize_value.rs  validate.rs
rust_schema2/src/rust_schema_impls/: array.rs  core.rs  maps.rs  mod.rs  primitives.rs  sequences.rs  tuples.rs  wrappers.rs
rust_schema2/src/value/: mod.rs  number.rs  ser.rs
rust_schema2/tests/: enum.rs  simple.rs  struct.rs  validate.rs
rust_schema2/tests/common/: mod.rs
rust_schema2/tests/snapshots/rust_schema2/tests/: enum.rs~enum1.json  simple.rs~struct_with_normal_field.json  struct.rs~new_type_struct.json  struct.rs~normal_struct.json  struct.rs~tuple_struct.json  struct.rs~unit_struct.json
rust_schema2_derive/: Cargo.toml  README.md
rust_schema2_derive/src/: container.rs  container_debug.rs  idents.rs  lib.rs  schema_exprs.rs
testing/: Cargo.toml  output.rs
testing/src/: main.rs
zconf/zconf2/src/: lib.rs
zconf2/: Cargo.toml
zconf2/src/: lib.rs
