[package]
name = "configurator"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
i18n-embed.workspace = true
rust-embed.workspace = true
i18n-embed-fl.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
tracing-journald.workspace = true
anyhow.workspace = true
figment = {workspace = true, features = ["json"]}
schemars = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
json = { workspace = true }
zconf2 = { workspace = true }
derive_more = {  workspace = true, features = ["unwrap"] }
ron.workspace = true
xdg.workspace = true
directories.workspace = true
indexmap.workspace = true
configurator_utils.workspace = true
light_enum.workspace = true
include_dir.workspace = true
bon.workspace = true
constcat.workspace = true

[dependencies.libcosmic]
workspace = true
features = [
    "wgpu",
    "winit",
    # "tokio",
    # "single-instance",
    #"a11y",
]

[dev-dependencies]
configurator_schema = { workspace = true }
serial_test.workspace = true
pretty_assertions.workspace = true
dir-assert.workspace = true
