[package]
name = "ron_value"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true


[features]
default = ["std"]
std = []
integer128 = []
indexmap = ["std", "dep:indexmap"]


[dependencies]
indexmap = { version = "2", default-features = false, optional = true }
nom = "8"

[dev-dependencies]
ron = "0.12"

[lints]
workspace = true
