[package]
name = "rust_schema"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
facet = "0.43"
facet-core = "0.43"
facet-format = "0.43"
facet-reflect = "0.43"

[lints]
workspace = true



[dev-dependencies]
json.workspace = true
schemars = "1"
serde = { workspace = true, features = ["derive"] }
