[package]
name = "rust_schema"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
facet = "0.43"
facet-core = "0.43"
facet-format = "0.43"
facet-json = "0.43"
facet-reflect = "0.43"

[lints]
workspace = true



[dev-dependencies]
pretty_assertions.workspace = true
serde = { workspace = true, features = ["derive"] }
json.workspace = true
