[package]
name = "rust_schema2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
rust_schema2_derive.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
schemars.workspace = true
json.workspace = true
snapbox = { version = "1", features = ["json"] }


[lints]
workspace = true
